# base

./: .gitignore  README.md  pyproject.toml
.github/workflows/: packaging.yml
abstractions/data_structures/: __init__.py  _tabular.py
src/abstractions/data_structures/: __init__.py  _clustering.py  _generic.py  _partitions.py  _tabular.py
src/abstractions/protocols/: __init__.py  _iterables.py  _sized_iterable.py
src/matchescu/: types.py  typing.py
src/matchescu/adt/: entity_resolution_result.py  types.py
src/matchescu/common/: abc  partitioning.py
src/matchescu/data/: __init__.py  _extraction.py  _feature_extraction.py  _source.py
src/matchescu/similarity/: __init__.py  _common.py  _exact_match.py  _matcher.py  _persistence.py  _reference_graph.py  _result.py  _string.py
src/matchescu/typing/: __init__.py  _callable.py  _data.py  _entity_resolution.py  _references.py
tests/: conftest.py
tests/data_structures/: test_clustering.py  test_partitioning.py  test_tabular_row.py  test_tabular_table.py
tests/matchescu/common/: test_partitioning.py
tests/matchescu/data/: conftest.py  test_extraction.py  test_record.py
tests/matchescu/similarity/: test_reference_graph.py  test_sim_graph.py  test_string.py  test_value_similarity_match.py
