[tool.poetry]
name = "matchescu-base"
version = "0.3.0"
description = ""
authors = ["Andrei Olar <andrei.olar@ubbcluj.ro>"]
readme = "README.md"
packages = [{include="matchescu", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
